--- a/index.html
+++ b/index.html
@@ -5,30 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <title>Speech to Text</title>
 </head>
 
-<body>
+<body class="container pt-5 bg-dark">
+    <div class="mt-4" id="div_lang">
+        <h2 class="mb-3 text-light">Selecciona un idioma</h2>
+        <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
+        <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
+    </div>
+    <p>Di Hola, a ver que pasa ^^ </p>
+    <p>O di 'Soy el mejor del mundo'</p>
 
-    <div>Di Hola </div>
     <div id="conf"></div>
 
+    <div class="mt-4">
+        <button class="btn btn-success" id="start">Iniciar</button>
+        <button class="btn btn-danger" id="stop">Parar</button>
+        <p id="status" class="lead mt-3 text-light" style="display: none">Escuchando ...</p>
+    </div>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script> -->
-    <script src="script.js"></script>
+    <script src="lib.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/speechkitt.min.js"></script>
+    <script src="language.js"></script>
     <script>
         if (annyang) {
             // Add our commands to annyang
             annyang.addCommands({
                 'hola': function () { alert('Hello world!'); },
-                'Soy el mejor del mundo': function(e) { alert('Hola bacalao' + e); }
+                'Soy el mejor del mundo': function (e) { alert('Hola bacalao' + e); }
             });
 
-            annyang.addCallback('result', function(e) {
+            annyang.addCallback('result', function (e) {
                 console.log('result', e);
             });
 
-            annyang.addCallback('resultMatch', function(userSaid, commandText, phrases, confidences) {
+            console.log(document.querySelector("#select_dialect").value);
+            annyang.setLanguage(document.querySelector("#select_dialect").value);
+
+            annyang.addCallback('resultMatch', function (userSaid, commandText, phrases, confidences) {
                 console.log(userSaid); // sample output: 'hello'
                 console.log(commandText); // sample output: 'hello (there)'
                 console.log(phrases); // sample output: ['hello', 'halo', 'yellow', 'polo', 'hello kitty']
@@ -36,17 +53,33 @@
                 document.getElementById('conf').innerHTML = confidences[0];
             });
 
-            // Tell KITT to use annyang
-            SpeechKITT.annyang();
+            // // Tell KITT to use annyang
+            // SpeechKITT.annyang();
 
-            // Define a stylesheet for KITT to use
-            SpeechKITT.setStylesheet('//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/themes/flat.css');
+            // // Define a stylesheet for KITT to use
+            // SpeechKITT.setStylesheet('//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/themes/flat.css');
 
-            // Render KITT's interface
-            SpeechKITT.vroom();
+            // // Render KITT's interface
+            // SpeechKITT.vroom();
         } else {
             console.log('Not supported');
         }
+
+        document.getElementById('start').addEventListener('click', () => {
+            console.log(document.querySelector("#select_dialect").value);
+            annyang.setLanguage(document.querySelector("#select_dialect").value);
+
+            annyang.start({ autoRestart: false, continuous: false });
+            document.querySelector("#status").style.display = "block";
+            document.getElementById('start').disabled = true;
+        });
+
+        document.getElementById('stop').addEventListener('click', () => {
+            annyang.abort();
+            document.querySelector("#status").style.display = "none";
+
+            document.getElementById('start').disabled = false;
+        });
     </script>
 </body>
 
