--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
         <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
     </div>
-    <p>Di Hola, a ver que pasa ^^ </p>
-    <p>O di 'Soy el mejor del mundo'</p>
+    <p class="text-light">Di Hola, a ver que pasa ^^ </p>
+    <p class="text-light">O di 'Soy el mejor del mundo'</p>
 
-    <div id="conf"></div>
+    <div id="conf" class="text-light"></div>
 
     <div class="mt-4">
         <button class="btn btn-success" id="start">Iniciar</button>
