--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <select class="form-select bg-secondary text-light" id="select_language" onchange="updateCountry()"></select>
         <select class="form-select bg-secondary text-light mt-2" id="select_dialect"></select>
     </div>
-    <p class="text-light">Di 'Hola', a ver que pasa ^^ </p>
-    <p class="text-light">O di 'Hello, I'm the best!'</p>
+    <p class="text-light">Di: 'Hola', a ver que pasa ^^ </p>
+    <p class="text-light">O di: 'Hello, I'm the best!'</p>
 
     <div id="conf" class="text-light"></div>
 
@@ -34,9 +34,10 @@
         if (annyang) {
             // Add our commands to annyang
             const commands = {'hola' : function() { alert('Buenas, ¿Qué tal?')}, 'Hello I"m the best': function () { alert('Sure ¬¬')}};
-
+            const commands2 = {'fluffy' : function() { alert('Fluffy')}};
             annyang.addCommands(commands);
-
+            annyang.addCommands(commands2);
+            
             annyang.addCallback('result', function (e) {
                 console.log('result', e);
             });
